--- a/public/404.html
+++ b/public/404.html
@@ -93,7 +93,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="default-error-page">
   <!-- This file lives in public/404.html -->
   <div class="aks-404-page">
     <div class="aks-404-page-content">
