--- a/public/500.html
+++ b/public/500.html
@@ -93,7 +93,7 @@
   </style>
 </head>
 
-<body class="rails-default-error-page">
+<body class="default-error-page">
   <!-- This file lives in public/500.html -->
   <div class="aks-500-page">
     <div class="aks-500-page-content">
